crates/remarkable-cli/tests/snapshots/output_snapshots__find_substring_match_human.snap
---
source: tests/output_snapshots.rs
expression: "find::format_output(&items, OutputFormat::Human)"
---
/Work/Meeting Notes  [notebook]  bbbbbbbb-1111-1111-1111-111111111111
