crates/remarkable-cli/tests/snapshots/output_snapshots__ls_documents_only_human.snap
---
source: tests/output_snapshots.rs
expression: "ls::format_output(&out, OutputFormat::Human)"
---
TYPE      NAME                           MODIFIED           
pdf       /Work/Projects/Research Paper  2024-03-17 18:26:40  24p  tags: research
notebook  /Work/Meeting Notes            2024-03-16 16:00:00  12p  tags: work, meetings
epub      /Quick Read                    2024-03-14 07:06:40  300p
